# collaborative-software-development

./: .gitignore  README.md  main.py  pyproject.toml
csd/: student.py  team.py
csd.egg-info/: PKG-INFO  SOURCES.txt
docs/: 01_introduction_to_version_control.md  01_introduction_to_version_control_install_instructions.md  02_introduction_to_version_control_theory.md  03_introduction_to_version_control_practice copy.md  03_introduction_to_version_control_practice.md
