[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "csd"
version = "0.1.0"
description = "A simple example package for demonstrating collaborative software development and reproducible computing in Python."
authors = [
    { name = "Florian Schunck", email = "fluncki@protonmail.com" }
]
license = { file = "LICENSE" }
keywords = ["collaboration", "data visualization", "network", "python"]
dependencies = [
    "networkx == 3.4.2",
    "matplotlib == 3.10.0"
]
[tool.setuptools.packages.find]
include = ["csd*"]

[project.urls]
"Homepage" = "https://github.com/flo-schu/collaborative-software-development"
"Repository" = "https://github.com/flo-schu/collaborative-software-development"